--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -6,12 +6,12 @@ a:link, a:visited, a:active, a:hover { color:#333; text-decoration:none; }
 .clear::after {display:block; content: ''; clear: both;}
 
 /*** antd checkbox ***/
-.ant-checkbox-checked .ant-checkbox-inner {background-color:#cb8ac4; border-color:#cb8ac4;}
-.ant-checkbox:hover {border-color:#cb8ac4 !important;}
-.ant-checkbox-inner::after:hover {border-color:#cb8ac4 !important;}
+.ant-checkbox-checked .ant-checkbox-inner {background-color:#c390db; border-color:#c390db;}
+.ant-checkbox:hover {border-color:#c390db !important;}
+.ant-checkbox-inner::after:hover {border-color:#c390db !important;}
 .ant-checkbox-wrapper:hover .ant-checkbox-inner, 
 .ant-checkbox:hover .ant-checkbox-inner,
-.ant-checkbox-input:focus + .ant-checkbox-inner {border-color:#cb8ac4 !important;}
+.ant-checkbox-input:focus + .ant-checkbox-inner {border-color:#c390db !important;}
 
 /*** header ***/
 header nav {position: absolute; width:100%; padding:2rem 3rem; z-index: 100;}
@@ -22,7 +22,7 @@ header nav ul li {display: inline-block; margin-left:1rem;}
 header nav ul li a {transition:all .2s ease-in-out;}
 header nav ul li:hover a {opacity: 0.7;}
 header nav .btn_nav_signup a {display:inline-block; border-radius:0.3rem; min-width:8rem; text-align:center; box-sizing:border-box; padding:0.8rem 0.5rem; border:1px solid #fff; background:none; color:#fff; font-size:1.3rem;}
-header nav .btn_nav_login a {display:inline-block; border-radius:0.3rem; min-width:8rem; text-align:center; box-sizing:border-box; padding:0.8rem 0.5rem; border:1px solid #fff; background:#fff; color:#cb8ac4; font-size:1.3rem; font-weight:500;}
+header nav .btn_nav_login a {display:inline-block; border-radius:0.3rem; min-width:8rem; text-align:center; box-sizing:border-box; padding:0.8rem 0.5rem; border:1px solid #fff; background:#fff; color:#de95a6; font-size:1.3rem; font-weight:500;}
 header nav .btn_nav_mypage a {width:3.5rem; height:3.5rem; background:#ddd; border-radius: 50%; display: block;}
 header nav .btn_nav_mypage .anticon-user {display: flex; justify-content: center; padding-top:0.3rem;}
 header nav .btn_nav_mypage .anticon-user svg {width:2.8rem; height:2.8rem; opacity:0.4;}
@@ -31,10 +31,10 @@ header nav.active {background:#8a94c3; border-bottom:1px solid #ccc;}
 /*** content ***/
 /* _index */
 main {margin-bottom:100px;}
-.sub_tit {height: 65px; background:#a791a9; width:100%; text-align:center; font-size:1.9rem; font-weight: 500; padding-top:25px; color:#fff;}
-.visual {display:flex; justify-content:center; flex-direction:column; align-items: center; background:url('../images/bg_visual.jpg') no-repeat center; background-size:cover; width:100%; height:400px;}
+.sub_tit {height: 65px; background:linear-gradient(135deg, rgba(193,145,244,1) 0%, rgba(222,149,166,1) 100%); width:100%; text-align:center; font-size:1.9rem; font-weight: 500; padding-top:25px; color:#fff;}
+.visual {display:flex; justify-content:center; flex-direction:column; align-items: center; background:url('../images/bg_visual.jpg') no-repeat center; background-size:cover; width:100%; height:40rem;}
 .visual h2 {display:inline; font-size:5rem; font-weight: 900; color:#fff;}
-.visual blockquote {padding:2.5rem 2rem; line-height:2rem; font-size:1.4rem; color:#ddd; text-align: center; font-weight:200;}
+.visual blockquote {padding:2.5rem 2rem; line-height:2rem; font-size:1.4rem; color:#e2e2e2; text-align: center; font-weight:200;}
 .visual blockquote span {display:block;}
 .search_box {display:flex; width:calc(100% - 3rem); max-width:650px; margin:0 auto; position:relative;}
 .search_box .anticon-search {position:absolute; left:2.8rem; top:-15px; color:#ddd; transition:all .2s ease-in-out;}
@@ -64,12 +64,12 @@ main {margin-bottom:100px;}
 .input_box input[type="checkbox"] {vertical-align: sub; cursor: pointer;}
 .input_box label {font-size:1.2rem; padding-left:5px; cursor: pointer;}
 .validation_message {color:#fa2828; font-size:1.1rem; padding:0 0 10px 3px;}
-.btn_login {margin-top:10px; display:block; width:300px; border:1px solid #cb8ac4; font-size:1.4rem; background:#cb8ac4; padding:10px 0; font-weight:500; color:#fff; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_login:hover {opacity: 0.85;}
+.btn_login {margin-top:10px; display:block; width:300px; border:1px solid #c390db; font-size:1.4rem; background:#fff; padding:10px 0; font-weight:500; color:#555; border-radius:4px; transition:all .2s ease-in-out;}
+.btn_login:hover {opacity: 0.85; background: #c390db; color: #fff;}
 .btn_link_join a {margin-top:10px; display:block; width:300px; border:1px solid #ddd; font-size:1.4rem; padding:13px 0; font-weight:500; text-align: center; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_link_join:hover a {opacity: 0.85;}
-.btn_join {margin-top:10px; display:block; width:300px; border:1px solid #cb8ac4; font-size:1.4rem; background:#cb8ac4; padding:10px 0; font-weight:500; color:#fff; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_join:hover {opacity: 0.85;}
+.btn_link_join:hover a {opacity: 0.7;}
+.btn_join {margin-top:10px; display:block; width:300px; border:1px solid #c390db; font-size:1.4rem; background:#fff; padding:10px 0; font-weight:500; color:#555; border-radius:4px; transition:all .2s ease-in-out;}
+.btn_join:hover {opacity: 0.85;background: #c390db; color: #fff;}
 
 /* _dtail */
 .visual_thumb {width: 100%; background:#000; overflow: hidden;}
@@ -80,12 +80,12 @@ main {margin-bottom:100px;}
 .book_cont .item_info .thumb_img {float:left; position: relative; border:1px solid #eaeaea; border-radius: 6px; padding:1px; margin:-35px 25px 0 10px; background:#fff;}
 .book_cont .item_info .title {font-size:3rem; font-weight: 800; padding-top:20px; line-height:3.8rem;}
 .book_cont .item_info .authors {font-size:1.7rem; color:#888; font-weight: 300; padding-top:1.5rem; display: block;}
-.btn_wish {margin-top:18px; border:1px solid #cb8ac4; background:#cb8ac4; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500; transition:all .2s ease-in-out;}
+.btn_wish {margin-top:18px; border:1px solid #c390db; background:#c390db; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500; transition:all .2s ease-in-out;}
 .btn_wish:hover {opacity: 0.85;}
 .btn_wish .anticon-plus {padding-right:4px;}
 .btn_wish .anticon-plus svg {transform: rotate(0deg); transition:all .3s ease-in-out;}
 .btn_wish:hover .anticon-plus svg {transform: rotate(90deg); transition:all .3s ease-in-out;}
-.btn_wish_cancel {margin-top:18px; border:1px solid #9194a5; background:#9194a5; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500;}
+.btn_wish_cancel {margin-top:18px; border:1px solid #babbc1; background:#babbc1; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500;}
 .btn_wish_cancel .anticon-tag {padding-right:4px;}
 .book_cont h4 {font-size:2rem; font-weight:600; letter-spacing: -1px; padding-bottom:20px;}
 .book_cont .item_intro,
