--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -2,26 +2,20 @@
 /*** common ****/
 html {font-size:10px;}
 body {font-family:'Noto Sans KR', sans-serif;}
-a:link, a:visited, a:active, a:hover { color:#333; text-decoration:none; }
+a:link, a:visited, a:active { color:#333; text-decoration:none; }
 .clear::after {display:block; content: ''; clear: both;}
 .loading {display: block; width: 100vw; height: 100vh; z-index: 1000; position: absolute; background: #fff url('../images/icon_loading.gif') no-repeat center 18rem; font-size:0; text-indent:-9999px;}
 
 /*** antd checkbox ***/
 .ant-checkbox-checked .ant-checkbox-inner {background-color:#c390db; border-color:#c390db;}
-.ant-checkbox:hover {border-color:#c390db !important;}
-.ant-checkbox-inner::after:hover {border-color:#c390db !important;}
-.ant-checkbox-wrapper:hover .ant-checkbox-inner, 
-.ant-checkbox:hover .ant-checkbox-inner,
 .ant-checkbox-input:focus + .ant-checkbox-inner {border-color:#c390db !important;}
 
 /*** header ***/
 header nav {position: absolute; width:100%; padding:2rem 3rem; z-index: 100;}
 header nav h1 a {float:left; font-size:2rem; font-weight: 500; font-family: 'Roboto', sans-serif; color:#fff !important; transition:all .2s ease-in-out;}
-header nav h1 a:hover {opacity: 0.7;}
 header nav ul {float:right; margin-top:-3px;}
 header nav ul li {display: inline-block; margin-left:1rem;}
 header nav ul li a {transition:all .2s ease-in-out;}
-header nav ul li:hover a {opacity: 0.7;}
 header nav .btn_nav_signup a {display:inline-block; border-radius:0.3rem; min-width:8rem; text-align:center; box-sizing:border-box; padding:0.8rem 0.5rem; border:1px solid #fff; background:none; color:#fff; font-size:1.3rem;}
 header nav .btn_nav_login a {display:inline-block; border-radius:0.3rem; min-width:8rem; text-align:center; box-sizing:border-box; padding:0.8rem 0.5rem; border:1px solid #fff; background:#fff; color:#de95a6; font-size:1.3rem; font-weight:500;}
 header nav .btn_nav_mypage a {width:3.5rem; height:3.5rem; background:#ddd; border-radius: 50%; display: block;}
@@ -52,7 +46,6 @@ main {margin-bottom:100px;}
 .search_result li .date {font-size:1.2rem; color:#888; padding-top:4px; font-weight: 300;}
 .search_result li .author {font-size:1.3rem; color:#555; padding-top:8px; line-height: 18px;}
 .btn_more {border:1px solid #d1d5d9; background:#fff; width:100px; height:40px; font-size:1.4rem; font-weight:500; border-radius:4px; display:block; margin:50px auto; color:#808991; transition:all .2s ease-in;}
-.btn_more:hover {background:#f2f4f5; color:#808991;}
 
 /* _signup, _login */
 .signup_cont, 
@@ -66,11 +59,9 @@ main {margin-bottom:100px;}
 .input_box label {font-size:1.2rem; padding-left:5px; cursor: pointer;}
 .validation_message {color:#fa2828; font-size:1.1rem; padding:0 0 10px 3px;}
 .btn_login {margin-top:10px; display:block; width:300px; border:1px solid #c390db; font-size:1.4rem; background:#fff; padding:10px 0; font-weight:500; color:#555; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_login:hover {opacity: 0.85; background: #c390db; color: #fff;}
 .btn_link_join a {margin-top:10px; display:block; width:300px; border:1px solid #ddd; font-size:1.4rem; padding:13px 0; font-weight:500; text-align: center; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_link_join:hover a {opacity: 0.7;}
 .btn_join {margin-top:10px; display:block; width:300px; border:1px solid #c390db; font-size:1.4rem; background:#fff; padding:10px 0; font-weight:500; color:#555; border-radius:4px; transition:all .2s ease-in-out;}
-.btn_join:hover {opacity: 0.85;background: #c390db; color: #fff;}
+
 
 /* _dtail */
 .visual_thumb {width: 100%; background:#000; overflow: hidden;}
@@ -82,10 +73,8 @@ main {margin-bottom:100px;}
 .book_cont .item_info .title {font-size:3rem; font-weight: 800; padding-top:20px; line-height:3.8rem;}
 .book_cont .item_info .authors {font-size:1.7rem; color:#888; font-weight: 300; padding-top:1.5rem; display: block;}
 .btn_wish {margin-top:18px; border:1px solid #c390db; background:#c390db; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500; transition:all .2s ease-in-out;}
-.btn_wish:hover {opacity: 0.85;}
 .btn_wish .anticon-plus {padding-right:4px;}
 .btn_wish .anticon-plus svg {transform: rotate(0deg); transition:all .3s ease-in-out;}
-.btn_wish:hover .anticon-plus svg {transform: rotate(90deg); transition:all .3s ease-in-out;}
 .btn_wish_cancel {margin-top:18px; border:1px solid #babbc1; background:#babbc1; width:200px; height:40px; border-radius:5px; color:#fff; font-size:1.6rem; font-weight:500; cursor: default;}
 .btn_wish_cancel .anticon-tag {padding-right:4px;}
 .book_cont h4 {font-size:2rem; font-weight:600; letter-spacing: -1px; padding-bottom:20px;}
@@ -104,7 +93,6 @@ main {margin-bottom:100px;}
 .myinfo_cont .img_profile .anticon-user svg {width: 8rem; height: 6rem; margin-top: 8px; box-sizing: border-box; opacity: 0.4;}
 .myinfo_cont .nickname {font-size:2.7rem; font-weight:600; color:#333; display: block; padding:1.5rem 0; float:left;}
 .myinfo_cont .btn_logout {border:1px solid #d1d5d9; background:#fff; width:80px; height:30px; font-size:1.2rem; font-weight:500; border-radius:4px; float:right; margin-top:-3rem; color:#808991; transition:all .2s ease-in;}
-.myinfo_cont .btn_logout:hover {background:#f2f4f5; color:#808991;}
 .wish_list {max-width:1000px; margin:50px auto 0 auto; padding:0 20px;}
 .wish_list h4 {font-size:1.8rem; font-weight:500;}
 .wish_list h4 span {font-size:1.3rem; color:#888; padding-left:1rem;}
@@ -114,11 +102,27 @@ main {margin-bottom:100px;}
 .wish_list li .title {font-size:1.3rem; font-weight:500; padding-top:10px; line-height:1.5rem; color:#333;}
 .wish_list li .author {font-size:1.1rem; color:#969696; padding-top:8px;}
 .btn_wish_delete {border:1px solid #d1d5d9; height:3rem; width:100%; margin-top:1.5rem; border-radius:4px; background:#fff; font-size:1.1rem; font-weight:500; color:#808991; transition:all .2s ease-in;}
-.btn_wish_delete:hover {background:#f2f4f5; color:#808991;}
 .btn_wish_delete span {padding-right:0.3rem;}
 .btn_wish_delete span svg {width:1.3rem; height:1.3rem;}
 
 
+@media only screen and (min-width : 561px) {
+    a:hover { color:#333; text-decoration:none; }
+    .ant-checkbox:hover {border-color:#c390db !important;}
+    .ant-checkbox-inner::after:hover {border-color:#c390db !important;}
+    .ant-checkbox-wrapper:hover .ant-checkbox-inner, 
+    .ant-checkbox:hover .ant-checkbox-inner {border-color:#c390db !important;}
+    header nav h1 a:hover {opacity: 0.7;}
+    header nav ul li:hover a {opacity: 0.7;}
+    .btn_more:hover {background:#f2f4f5; color:#808991;}
+    .btn_login:hover {opacity: 0.85; background: #c390db; color: #fff;}
+    .btn_link_join:hover a {opacity: 0.7;}
+    .btn_join:hover {opacity: 0.85;background: #c390db; color: #fff;}
+    .btn_wish:hover {opacity: 0.85;}
+    .btn_wish:hover .anticon-plus svg {transform: rotate(90deg); transition:all .3s ease-in-out;}
+    .myinfo_cont .btn_logout:hover {background:#f2f4f5; color:#808991;}
+    .btn_wish_delete:hover {background:#f2f4f5; color:#808991;}
+}
 
 @media only screen and (max-width : 560px) {
     .item_info {display: flex; flex-direction: column; align-items: center;}
@@ -133,9 +137,6 @@ main {margin-bottom:100px;}
     .btn_login,
     .btn_link_join a,
     .btn_join {width:100%;}
-    header nav h1 a:hover {display: none;}
-    header nav ul li:hover a {display: none;}
-
 }
 
 @media only screen and (min-width:371px) and (max-width : 560px) {
