--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -5,6 +5,7 @@ body {font-family:'Noto Sans KR', sans-serif;}
 a:link, a:visited, a:active { color:#333; text-decoration:none; }
 .clear::after {display:block; content: ''; clear: both;}
 .loading {display: block; width: 100vw; height: 100vh; z-index: 1000; position: absolute; background: #fff url('../images/icon_loading.gif') no-repeat center 16rem; font-size:0; text-indent:-9999px;}
+.antd_loading svg {color:#fff; width:2rem; height:2rem;}
 
 /*** antd checkbox ***/
 .ant-checkbox-checked .ant-checkbox-inner {background-color:#c390db; border-color:#c390db;}
